# cofa

./: .gitignore  README.md  pyproject.toml
data/arc/: train_subset.parquet
data/gsm/: gsm_1k.parquet
experiments/: arc_baselines.sh
notebooks/: create_train_subset.ipynb
sec/: SEC_difficulty_summary.csv  data_vis.ipynb  pyproject.toml
sec/examples/: arc.sh
sec/verl/: pyproject.toml  requirements.txt
sec/verl/verl/utils/reward_score/: arc.py  countdown.py  zebra.py
verl/: install.txt  qwen_gsm_lora_test.sbatch  run_qwen2_5-0.5b_lora_test.sh  slurm-16274979.out  slurm-16312875.out  slurm-16316661.out  slurm-16347777.out  slurm-16348557.out  slurm-16349177.out  slurm-16349182.out  slurm-16349196.out
verl/examples/sft/gsm8k/: run_qwen_05_peft.sh
verl/verl/trainer/: main_ppo.py
