[project]
name = "sec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.0"
dependencies = [
    "flash-attn",
    "hydra-core==1.2.0",
    "numpy<2.0.0",
    "setuptools>=80.9.0",
    "torch==2.4.0",
    "verl",
    "vllm==0.6.3",
]


[tool.uv.workspace]
members = [
    "verl",
]

[tool.uv.sources]
verl = { workspace = true }
flash-attn = { path = "../flash_attn-2.8.3+cu12torch2.4cxx11abiFALSE-cp310-cp310-linux_x86_64.whl" }
